--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -94,6 +94,7 @@ section#conteudo-view form input[type="submit"]{
 #menu{
   position: fixed;
   float: left;
+  z-index: 5;
   width: 300px;
   height: 100%;
   background: #0099ff;
@@ -132,4 +133,74 @@ section#conteudo-view form input[type="submit"]{
 
 #menu ul li a:hover{
   color: #0000ff;
+}
+
+/*
+=========================================
+--------stylesheet to conteudo----------
+=========================================
+*/
+
+#view-conteudo{
+  position: fixed;
+  float: left;
+  width: 100%;
+  height: 100%;
+  padding: 20px 20px 20px 320px;
+  z-index: 1;
+}
+
+/*
+=========================================
+----------stylesheet to form------------
+=========================================
+*/
+
+form.form-padrao{
+  float: left;
+  width: 100%;
+}
+
+form.form-padrao label{
+  float: left;
+  width: 49%;
+  height: 60px;
+  padding: 7px 15px;
+  border: 1px solid #e9e9e9;
+  background: #fff;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+form.form-padrao label:nth-last-of-type(odd){
+  margin-left: 2%;
+}
+
+form.form-padrao label span{
+  float: left;
+  width: 100%;
+  font: 400 .75em 'Arial';
+  color: #c7c7c7;
+  padding-bottom: 5px;
+}
+
+form.form-padrao label input{
+  float: left;
+  width: 100%;
+  font: 400 1.25em 'Arial';
+  color: #5c5c5c;
+  padding-bottom: 5px;
+  background: transparent;
+}
+
+form.form-padrao label.submit{
+  background: #00eeff;
+  border-color: #0055ff;
+}
+
+form.form-padrao label.submit input{
+  font-weight: 800;
+  text-transform: uppercase;
+  line-height: 50px;
+  color: #f9f9f9;
 }
