--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -148,6 +148,7 @@ section#conteudo-view form input[type="submit"]{
   height: 100%;
   padding: 20px 20px 20px 320px;
   z-index: 1;
+  background: #eeeeee;
 }
 
 /*
@@ -203,4 +204,38 @@ form.form-padrao label.submit input{
   text-transform: uppercase;
   line-height: 50px;
   color: #f9f9f9;
+}
+
+/*
+=========================================
+----------stylesheet to table------------
+=========================================
+*/
+
+.dafault_table{
+  float:left;
+  width: 100%;
+  background: #fff;
+  border: 1px solid #e9e9e9;
+  padding: 10px;
+  font: 400 1.25em 'Arial';
+  color: #5c5c5c;
+}
+
+.dafault_table thead{
+  text-transform: uppercase;
+  font-weight: 800;
+  text-align: center;
+}
+
+.dafault_table thead tr{
+  height: 40px;
+}
+
+.dafault_table tbody tr{
+  height: 20px;
+}
+
+.dafault_table tbody{
+  text-align: center;
 }
